<resources>
    <string name="app_name">Playlist Maker</string>
    <string name="main_screen_title">Playlist maker</string>
    <string name="search">Поиск</string>
    <string name="media_library">Медиатека</string>
    <string name="settings">Настройки</string>
    <string name="dark_theme">Темная тема</string>
    <string name="share_app">Поделиться приложением</string>
    <string name="write_to_support">Написать в поддержку</string>
    <string name="user_agreement">Пользовательское соглашение</string>
    <string name="step_back">Вернуться назад</string>
    <string name="mail_subject">Сообщение разработчикам и разработчицам приложения Playlist Maker</string>
    <string name="mail_text">Спасибо разработчикам и разработчицам за крутое приложение!</string>
    <string name="my_mail">iliakirsanov5321@gmail.com</string>
    <string name="url_practicum_offer">https://yandex.ru/legal/practicum_offer</string>
    <string name="url_practicum_course">https://practicum.yandex.ru/android-developer/?from=catalog</string>
    <string name="track_list">Список треков</string>
    <string name="update">Обновить</string>
    <string name="problem_with_network">Проблемы со связью\n\nЗагрузка не удалась. Проверьте подключение к интернету</string>
    <string name="nothing_was_found">Ничего не нашлось</string>
    <string name="you_searched">Вы искали</string>
    <string name="clear_history">Очистить историю</string>
    <string name="cover_image">Альбом</string>
    <string name="duration">Длительность</string>
    <string name="album">Альбом</string>
    <string name="genre">Жанр</string>
    <string name="year">Год</string>
    <string name="country">Страна</string>
    <string name="add_to_favorites">Добавить в избранное</string>
    <string name="add_to_playlist">Добавить в плейлист</string>
    <string name="play">Включить трек</string>
    <string name="pause">Поставить трек на паузу</string>
    <string name="media_library_is_empty">Ваша медиатека пуста</string>
    <string name="playlist_was_not_created">Вы не создали\nни одного плейлиста</string>
    <string name="new_playlist">Новый плейлист</string>
    <string name="favorites_tracks">Избранные треки</string>
    <string name="playlists">Плейлисты</string>
    <string name="save">Сохранить</string>
    <string name="create">Создать</string>
    <string name="best_song">Best of the best</string>
    <string name="track_count">0 треков</string>
    <string name="title">Название*</string>
    <string name="description">Описание</string>
    <string name="photo_storage">PlaylistAlbum</string>
    <string name="track_is_already_in_playlist">Трек уже добавлен в плейлист</string>
    <string name="track_was_added_in_playlist">Добавлено в плейлист</string>
    <string name="finish_creating">Завершить создание плейлиста?</string>
    <string name="all_data_will_be_lost">Все несохраненные данные будут потеряны</string>
    <string name="cansel">Отмена</string>
    <string name="finish">Завершить</string>
    <string name="extension_jpg">.jpg</string>
    <string name="playlist">Плейлист</string>
    <string name="created">создан</string>
    <string name="playlist_is_empty">В плейлисте нет треков</string>
    <string name="track">трек</string>
    <string name="track_a">трека</string>
    <string name="track_ov">треков</string>
    <string name="minute">минута</string>
    <string name="minutes">минут</string>
    <string name="minutes2">минуты</string>
    <string name="share">Поделиться</string>
    <string name="edit_info">Редактировать информацию</string>
    <string name="delete_playlist">Удалить плейлист</string>
    <string name="do_you_want_to_delete_track">Хотите удалить трек?</string>
    <string name="do_you_want_to_delete_playlist">Хотите удалить плейлист</string>
    <string name="yes">Да</string>
    <string name="no">Нет</string>
    <string name="edit">Редактировать</string>
    <string name="delete">Удалить</string>
    <string name="playlist_is_not_available_for_sharing">Список треков, которым можно поделиться пуст</string>

    <!--Mock-object strings-->
    <string name="total_track_duration">300 минут</string>
    <string name="playlist_track_count">90 треков</string>
    <string name="first_track">Smells Like Teen Spirit</string>
    <string name="first_group">Nirvana</string>
    <string name="first_track_time">05:01</string>
    <string name="first_album_url">https://is5-ssl.mzstatic.com/image/thumb/Music115/v4/7b/58/c2/7b58c21a-2b51-2bb2-e59a-9bb9b96ad8c3/00602567924166.rgb.jpg/100x100bb.jpg</string>
    <string name="first_album">Nevermind</string>
    <string name="first_release_date">"1990-09-10T12:00:00Z"</string>
    <string name="first_genre">Rock</string>
    <string name="country_USA">United States of America</string>
    <string name="first_preview_url">https://audio-ssl.itunes.apple.com/itunes-assets/AudioPreview125/v4/44/8d/b2/448db2c4-5185-9eb5-66c2-d1e7182687ad/mzaf_14615718485326206820.plus.aac.p.m4a</string>
    <string name="second_track">Billie Jean</string>
    <string name="second_group">Michael Jackson is the best of the best singers in all over the world in my humble opinion</string>
    <string name="second_track_time">04:35</string>
    <string name="second_album_url">https://is5-ssl.mzstatic.com/image/thumb/Music125/v4/3d/9d/38/3d9d3811-71f0-3a0e-1ada-3004e56ff852/827969428726.jpg/100x100bb.jpg</string>
    <string name="second_release_date">"1983-01-03T12:00:00Z"</string>
    <string name="second_genre">Post-disco · funk · dance-pop</string>
    <string name="second_preview_url">https://audio-ssl.itunes.apple.com/itunes-assets/AudioPreview112/v4/4f/ec/3e/4fec3ef8-c17c-394d-3573-a0a2aabd8889/mzaf_12729007880218988606.plus.aac.p.m4a</string>
    <string name="third_track">Stayin\' Alive</string>
    <string name="third_group">Bee Gees</string>
    <string name="third_track_time">04:10</string>
    <string name="third_album_url">https://is4-ssl.mzstatic.com/image/thumb/Music115/v4/1f/80/1f/1f801fc1-8c0f-ea3e-d3e5-387c6619619e/16UMGIM86640.rgb.jpg/100x100bb.jpg</string>
    <string name="third_genre">Disco</string>
    <string name="third_preview_url">https://audio-ssl.itunes.apple.com/itunes-assets/AudioPreview221/v4/42/88/4e/42884efe-30d5-d42e-62fe-6da1167691a7/mzaf_4265605239884074043.plus.aac.p.m4a</string>
    <string name="fourth_track">Whole Lotta Love</string>
    <string name="fourth_group">Led Zeppelin</string>
    <string name="fourth_track_time">05:33</string>
    <string name="fourth_album_url">https://is2-ssl.mzstatic.com/image/thumb/Music62/v4/7e/17/e3/7e17e33f-2efa-2a36-e916-7f808576cf6b/mzm.fyigqcbs.jpg/100x100bb.jpg</string>
    <string name="fourth_preview_url">https://audio-ssl.itunes.apple.com/itunes-assets/AudioPreview125/v4/e2/87/4e/e2874e7b-59a7-f202-0df7-5859ca6c2553/mzaf_5071354127157930167.plus.aac.p.m4a</string>
    <string name="fifth_track">Sweet Child O\'Mine</string>
    <string name="fifth_group">Guns N\' Roses</string>
    <string name="fifth_track_time">05:03</string>
    <string name="fifth_album_url">https://is5-ssl.mzstatic.com/image/thumb/Music125/v4/a0/4d/c4/a04dc484-03cc-02aa-fa82-5334fcb4bc16/18UMGIM24878.rgb.jpg/100x100bb.jpg</string>
    <string name="fifth_preview_url">https://audio-ssl.itunes.apple.com/itunes-assets/AudioPreview211/v4/17/85/a9/1785a9d7-be0d-3ef6-20a3-06563028c2a6/mzaf_11217232726484859087.plus.aac.p.m4a</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>