<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <ImageView
        android:id="@+id/placeholder_icon_not_found_favorites"
        style="@style/placeholder_icon_nothing_was_search"
        android:layout_marginTop="@dimen/margin_106"
        android:contentDescription="@string/nothing_was_found"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
    <TextView
        android:id="@+id/favorites_tracks_placeholder_message"
        style="@style/placeholder_text_view"
        android:textAppearance="@style/placeholder_message_text_appearance"
        android:text="@string/media_library_is_empty"
        android:layout_marginTop="@dimen/margin_16"
        app:layout_constraintTop_toBottomOf="@id/placeholder_icon_not_found_favorites"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/favorites_recycler_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:contentDescription="@string/track_list"
        android:layout_marginTop="@dimen/margin_20"/>
</androidx.constraintlayout.widget.ConstraintLayout>