<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="61dp"
    android:orientation="horizontal"
    android:theme="@style/Base.Theme.Playlist_Maker">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="@dimen/icon_size_45"
        android:layout_height="@dimen/icon_size_45"
        android:layout_marginLeft="@dimen/track_list_margin_13"
        android:layout_gravity="center_vertical"
        app:cardCornerRadius="@dimen/track_icon_corner_radius"
        app:cardElevation="@dimen/elevation_0"
        app:cardBackgroundColor="@android:color/transparent">
        <ImageView
            android:id="@+id/album_art"
            style="@style/track_list_album_icon" />
    </androidx.cardview.widget.CardView>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:layout_gravity="center_vertical"
        android:layout_marginLeft="@dimen/margin_8"
        android:layout_marginRight="@dimen/margin_8"
        android:orientation="vertical">
        <TextView
            android:id="@+id/song_name"
            android:layout_width="match_parent"
            style="@style/track_list_text_view"
            android:textAppearance="@style/track_list_song_name"
            android:text="@string/first_track"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/vocalist_name"
                style="@style/track_list_text_view"
                android:textAppearance="@style/track_list_vocalist_time"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:text="@string/first_group"/>
            <ImageView
                android:id="@+id/track_list_separator_icon"
                style="@style/separator_icon"
                />
            <TextView
                android:id="@+id/song_time"
                style="@style/track_list_text_view"
                android:textAppearance="@style/track_list_vocalist_time"
                android:layout_width="wrap_content"
                android:text="@string/first_track_time"/>
        </LinearLayout>
    </LinearLayout>

    <ImageView
        android:id="@+id/track_next"
        style="@style/track_list_arrow_icon" />
</LinearLayout>